# statistical_outlier_removal_cvmat

./: CMakeLists.txt  README.md  reconfigure.bat
include/: statistical_outlier_removal.h
pc/: main.cpp
